pgapack (1.1.2-1) unstable; urgency=low

  * New upstream version
  * Manual is built from source
  * Word length of architecture is now autodetected by upstream package
  * Reported errors in manual have been corrected upstream

 -- Ralf Schlatterbeck <rsc@runtux.com>  Mon, 18 Sep 2017 15:53:45 +0200

pgapack (1.1.1-3) unstable; urgency=low

  * debian/computeWordlength.sh: Added simple shell script to compute the 
    size of long to determine whether 32 or 64 bit systems are used
  * configure(.in): Use computeWordlength.sh to switch between "-DWL=32"
    "-DWL-64" at build-time				(Closes: #641553)

  * debian/control: Improved Description synopsis 	(thanks, Lintian)
  
 -- Dirk Eddelbuettel <edd@debian.org>  Thu, 15 Sep 2011 09:02:45 -0500

pgapack (1.1.1-2) unstable; urgency=low

  * debian/rules: Also allow for MPICH2 which is now more broadly
    available in Debian and can act as a fallback when Open MPI is not
    available. Special thanks to Nicholas Breen for the patch.
  							(Closes: #626330)

  * debian/control: Updated Standards-Version: to 3.9.1

  * debian/control: Added ${misc:Depends} to Depends for all packages
  
 -- Dirk Eddelbuettel <edd@debian.org>  Thu, 12 May 2011 20:25:00 -0500

pgapack (1.1.1-1) unstable; urgency=low

  * This release provides a more complete reconstitution adding two files.
    - doc/user_guide.tex: Re-added LaTeX sources recoverd by David Levine 
      from a decade-old backup tape. Thanks!
    - doc/tpage.sty: Added historic Argonne titlepage style procured by 
      Rusty Lusk and Barry Smith at Argonne National Labs. Thanks!

  * debian/control: Rewrote dependency on MPI using the new meta-packages 
    mpi-default-dev (for Build-Depends:) and mpi-default-bin (for Depends:)
    now that Open MPI 1.3.2 has hit unstable
  
  * debian/control: Updated Standards-Version: to 3.8.1
  
 -- Dirk Eddelbuettel <edd@debian.org>  Mon, 01 Jun 2009 21:26:42 -0500

pgapack (1.1-2) unstable; urgency=low
