@@ -3,10 +3,11 @@ Section: math
 Priority: optional
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Standards-Version: 3.9.1
-Build-Depends: debhelper (>= 7.0), libopenmpi-dev, libmpich-dev, lam4-dev
+Build-Depends: debhelper (>= 7.0), libopenmpi-dev, libmpich-dev,
+    lam4-dev, texlive-latex-base
 
 Package: pgapack
-Architecture: any
+Architecture: all
 Depends: ${shlibs:Depends}, ${misc:Depends}
 Suggests: libpgapack-serial1 | libpgapack-openmpi1 |
  libpgapack-mpich1 | libpgapack-lam1
