@@ -1,0 +1,2 @@
+libpgapack-lam: non-dev-pkg-with-shlib-symlink usr/lib/libpgapack-lam.so.1.0 usr/lib/libpgapack-lam.so
+libpgapack-lam: package-name-doesnt-match-sonames libpgapack-lam-1
