@@ -1,0 +1,2 @@
+libpgapack-openmpi: non-dev-pkg-with-shlib-symlink usr/lib/libpgapack-openmpi.so.1.0 usr/lib/libpgapack-openmpi.so
+libpgapack-openmpi: package-name-doesnt-match-sonames libpgapack-openmpi-1
