@@ -1,2 +1,0 @@
-libpgapack-serial1: non-dev-pkg-with-shlib-symlink usr/lib/libpgapack-serial1.so.1.0 usr/lib/libpgapack-serial1.so
-libpgapack-serial1: package-name-doesnt-match-sonames libpgapack-serial1-1
